test/langtools/tools/javac/cached/CachedMethodDeclarations.out
CachedMethodDeclarations.java:12:27: compiler.err.illegal.combination.of.modifiers: union or cached, native
CachedMethodDeclarations.java:20:29: compiler.err.illegal.combination.of.modifiers: union or cached, abstract
CachedMethodDeclarations.java:37:28: compiler.err.illegal.combination.of.modifiers: union or cached, default
CachedMethodDeclarations.java:13:39: compiler.err.cached.method.params
CachedMethodDeclarations.java:14:16: compiler.err.cached.method.void
CachedMethodDeclarations.java:38:28: compiler.err.cached.method.not.intf
CachedMethodDeclarations.java:39:27: compiler.err.cached.method.not.intf
CachedMethodDeclarations.java:43:20: compiler.err.cached.method.not.intf
- compiler.note.preview.filename: CachedMethodDeclarations.java, DEFAULT
- compiler.note.preview.recompile
8 errors
